# Motor

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  PIDparams.txt  button_interrupt.cpp  cmake_install.cmake  errorData.txt  main.cpp  motorData.csv  motorData.txt  rpmData.csv  rpmData.txt
PID/: PID.cpp  PID.h
